Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
@@ -13,7 +13,8 @@
 	text-decoration: none !important;
 }
 
-.cke_button__code_label {
+.cke_button__code_label,
+.cke_button__attach_label {
   display: inline-block !important;
   line-height: 16px !important;
 }
