Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/mvc/component/ext/login/$resource/css/default/login.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/login/$resource/css/default/login.css
@@ -48,6 +48,10 @@
 	line-height: 18px;
 }
 
+.login_toolbar { 
+  line-height: 21px;
+}
+
 .login_icon_normal {
 	background-image: url(images/normal.png);
 }
