Signed-off-by: CHENKAN <CHENKAN@CHENKAN-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -59,7 +59,14 @@
 .form_tbl .v .Comp_Attachment .fitem {
   border-bottom: 0;
   border-top: 1px dashed #ccc;
-  margin-top: -1px;
+}
+
+.form_tbl .v .swfupload .swf_btns {
+  margin: 8px 12px;
+}
+
+.form_tbl .v .swfupload .queue {
+  border-top: 0;
 }
 
 .attachment_edit .c {
