Signed-off-by: CHENKAN <CHENKAN@CHENKAN-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/Comment.html
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/Comment.html
@@ -10,7 +10,7 @@
     <div class="clearfix"></div>
   </div>
   <div class="l2">
-    <textarea id="textarea_${hashId}" name="comment" rows="5"></textarea>
+    <textarea id="textarea_${hashId}" name="ccomment" rows="5"></textarea>
     <input type="hidden" name="parentId" />
   </div>
   <div class="l3">
