--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -1,72 +1,55 @@
-.Comp_Attachment .swfupload .item,
+.Comp_Attachment .swfupload .item, 
 .Comp_Attachment .swfupload .message {
-	padding-left: 6px !important;
-	padding-right: 6px !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
 }
 
 .Comp_Attachment .fitem {
   line-height: 19px;
-	padding: 8px;
-	border-bottom: 1px solid #ccc;
-	overflow: hidden;
-	_zoom: 1;
+  padding: 8px;
+  border-bottom: 1px solid #ccc;
+  overflow: hidden;
+  _zoom: 1;
 }
 
 .Comp_Attachment .fitem:hover {
-	background-color: #f2f9f2;
+  background-color: #f2f9f2;
 }
 
-.Comp_Attachment input,
-.Comp_Attachment label,
+.Comp_Attachment input, 
+.Comp_Attachment label, 
 .Comp_Attachment span {
-	vertical-align: middle;
-	cursor: pointer;
+  vertical-align: middle;
+  cursor: pointer;
 }
 
 .Comp_Attachment .size {
-	color: #999;
-	font-family: Candara;
-	margin-left: 4px;
+  color: #999;
+  font-family: Candara;
+  margin-left: 4px;
 }
 
 .Comp_Attachment .l_attach {
-	padding-left: 12px;
+  padding-left: 12px;
 }
 
 .Comp_Attachment .l_add {
-	background: url("images/add.gif") no-repeat 0 50%;
-	color: blue;
+  background: url("images/add.gif") no-repeat 0 50%;
+  color: blue;
 }
 
 .Comp_Attachment .l_delete {
-	background: url('images/delete.gif') no-repeat 0 50%;
-	color: red;
+  background: url('images/delete.gif') no-repeat 0 50%;
+  color: red;
 }
 
 .Comp_Attachment .b_attach {
-	padding: 8px 8px 8px 20px;
-	overflow: hidden;
+  padding: 8px 8px 8px 20px;
+  overflow: hidden;
 }
 
 .Comp_Attachment .b_attach .rbtn {
-	float: right;
-}
-
-.form_tbl .v .Comp_Attachment {
-  margin: -2px -2px -3px;
-}
-
-.form_tbl .v .Comp_Attachment .fitem {
-  border-bottom: 0;
-  border-top: 1px dashed #ccc;
-}
-
-.form_tbl .v .swfupload .swf_btns {
-  margin: 8px 12px;
-}
-
-.form_tbl .v .swfupload .queue {
-  border-top: 0;
+  float: right;
 }
 
 .attachment_edit .c {
@@ -80,4 +63,25 @@
 .attachment_edit .b {
   text-align: right;
   margin: 6px 6px 0 0;
+}
+/*-------- form_tbl ---------*/
+.form_tbl .v .Comp_Attachment {
+  margin: -2px -2px -3px;
+}
+
+.form_tbl .v .Comp_Attachment.readonly {
+  margin-top: -5px;
+}
+
+.form_tbl .v .Comp_Attachment .fitem {
+  border-bottom: 0;
+  border-top: 1px dashed #ccc;
+}
+
+.form_tbl .v .swfupload .swf_btns {
+  margin: 8px 12px;
+}
+
+.form_tbl .v .swfupload .queue {
+  border-top: 0;
 }
