--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -66,7 +66,7 @@
 }
 /*-------- form_tbl ---------*/
 .form_tbl .v .Comp_Attachment {
-  margin: -2px -2px -3px;
+  margin: 0 -4px -4px;
 }
 
 .form_tbl .v .Comp_Attachment.readonly {
