--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -1,6 +1,6 @@
 .Comp_Comment .t1_head {
   background: #f9f9f9;
-  border: 1px solid #aaa;
+  border: 1px solid #ccc;
   padding: 0 8px;
 }
 
@@ -38,7 +38,7 @@
 .Comp_Comment .t1_head .reply_1 {
   margin-top: 7px;
   cursor: default;
-  border: 1px solid #aaa;
+  border: 1px solid #ccc;
   padding: 0 6px;
   height: 20px;
   line-height: 19px;
@@ -89,12 +89,9 @@
 }
 
 .Comp_Comment .t1_head .l2 {
-  border: 1px solid #ccc;
-  padding: 6px;
-  background: #fff;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 .Comp_Comment .t1_head .l2 textarea {
@@ -104,22 +101,18 @@
 }
   
 .Comp_Comment .t1_comments {
-  border: 1px solid #aaa;
+  border: 1px solid #ccc;
   background: #fefefe;
   margin-top: -1px;
 }
 
-.Comp_Comment .t1_comments .pager_block_bottom {
-	margin: 8px !important;
-}
-
 .Comp_Comment .t1_comments .oitem {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #eee;
 	padding: 10px 6px 2px;
 }
 
 .Comp_Comment .t1_comments .oitem:hover {
-	background: #f4f4f4;
+	background: #fcfcfc;
 }
 
 .Comp_Comment .t1_comments .oitem table {
@@ -129,12 +122,15 @@
 
 .Comp_Comment .t1_comments .oitem td.icon {
 	text-align: center;
-	width: 80px;
+	width: 90px;
 }
 
 .Comp_Comment .t1_comments .oitem .photo_icon {
 	width: 36px;
 	height: 36px;
+	-moz-border-radius: 36px;
+	-webkit-border-radius: 36px;
+	border-radius: 36px;
 }
 
 .Comp_Comment .t1_comments .oitem .icon_d {
@@ -146,31 +142,36 @@
 .Comp_Comment .t1_comments .oitem .mc {
 	font-size: 9.5pt;
 	line-height: 1.6;
+	padding: 12px 0;
 }
 	
 .Comp_Comment .t1_comments .oitem .rc {
-	background: #f9f9f9;
-	border: 1px solid #ddd;
-	margin: -12px 0 8px -12px;
+	background-color: #f5f5f5;
+	margin: 0 4px 4px -2px;
 	padding: 12px;
-	-moz-border-radius: 0 0 9px 9px;
-	-webkit-border-radius: 0 0 9px 9px;
-	border-radius: 0 0 9px 9px;
 	color: #666;
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	border-radius: 9px;
 }
 
 .Comp_Comment .t1_comments .oitem .r_desc {
-	border-bottom: 1px dashed #ccc;
 	padding-bottom: 5px;
 	margin-bottom: 4px;
 }
 
 .Comp_Comment .t1_comments .oitem .desc {
-	margin: 8px 8px 0 0;
+	margin: 8px 8px 4px 0;
 	text-align: right;
 	color: #888;
 }
 
 .Comp_Comment .pager_no_result {
   border: 0;
+  background-color: #fff;
+}
+
+.Comp_Comment .pager .pager_block_top, 
+.Comp_Comment .pager .pager_block_bottom {
+  padding: 12px 8px;
 }
