--- a/src/main/java/net/simpleframework/mvc/component/ext/userselect/$resource/css/default/user_select.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/userselect/$resource/css/default/user_select.css
@@ -4,16 +4,17 @@
 
 .user_select .tablepager .thead,
 .user_select .tablepager .tfilter,
-.user_select .tablepager .tbody {
+.user_select .tablepager .tbody,
+.user_select .pager_no_result {
   border-left: 0 !important;
   border-right: 0 !important;
 }
 
 .user_select .pager .pager_block_top {
-  border: 0;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
+  border: 0;
   height: 28px;
   padding: 0;
   background: none;
@@ -24,8 +25,8 @@
 }
 
 .user_select .b {
-  background-color: #F1F1F1;
-  border-top: 1px solid #AAAAAA;
+  background-color: #f9f9f9;
+  border-top: 1px solid #ccc;
   bottom: 0;
   padding: 6px;
   position: absolute;
