Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -102,7 +102,7 @@
   
 .Comp_Comment .t1_comments {
   border: 1px solid #ccc;
-  background: #fefefe;
+  background-color: #fff;
   margin-top: -1px;
 }
 
