Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/chosen/$resource/css/default/chosen.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/chosen/$resource/css/default/chosen.css
@@ -8,6 +8,7 @@
   *display: inline;
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 .chosen-container .chosen-drop {
