--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -95,7 +95,7 @@
 }
 
 .attachment_edit .c {
-  margin: 6px;
+  margin: 5px 4px 4px;
 }
 
 .attachment_edit .form_tbl {
@@ -103,9 +103,15 @@
 }
 
 .attachment_edit .b {
+  background-color: #f6f6f6;
+  bottom: 0;
+  left: 0;
+  padding: 6px 10px 5px;
+  position: absolute;
+  right: 0;
   text-align: right;
-  margin: 6px 6px 0 0;
 }
+
 /*-------- form_tbl ---------*/
 .form_tbl .v .Comp_Attachment {
   margin: -3px -4px;
