--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
@@ -1,19 +1,19 @@
 .cke_top {
-	padding: 5px 4px 0 !important;
-	background-image: none !important;
-	background-color: #fcfcfc !important;
+  padding: 5px 4px 0 !important;
+  background-image: none !important;
+  background-color: #fcfcfc !important;
   filter: none !important;
 }
 
 .cke_reset_all, .cke_reset_all * {
-	font-family: inherit !important;
+  font-family: inherit !important;
 }
 
 .cke_reset_all a:hover {
-	text-decoration: none !important;
+  text-decoration: none !important;
 }
 
-.cke_button__code_label,
+.cke_button__code_label, 
 .cke_button__attach_label {
   display: inline-block !important;
   line-height: 16px !important;
@@ -22,6 +22,12 @@
 .cke_chrome {
   padding: 0 !important;
   -moz-border-radius: 0 !important;
-	-webkit-border-radius: 0 !important;
-	border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  border-radius: 0 !important;
+}
+
+.cke_contents {
+  border-bottom: 0 !important;
+  border-left: 0 !important;
+  border-right: 0 !important;
 }
