Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -103,7 +103,7 @@
 }
   
 .Comp_Comment .t1_comments {
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
   background-color: #fff;
   margin-top: -1px;
 }
