--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
@@ -133,3 +133,8 @@ a > img {
 	border: none;
 	outline: 1px solid #0782C1;
 }
+
+/* ckan77 */ 
+.cke_editable[contenteditable="false"] * {
+  color: #888 !important;
+}
