--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
@@ -135,6 +135,7 @@ a > img {
 }
 
 /* ckan77 */ 
+body[contenteditable="false"] *,
 .cke_editable[contenteditable="false"] * {
   color: #888 !important;
 }
