--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
@@ -24,10 +24,15 @@
   -moz-border-radius: 0 !important;
   -webkit-border-radius: 0 !important;
   border-radius: 0 !important;
+  border-color: #bbb !important;
 }
 
 .cke_contents {
   border-bottom: 0 !important;
   border-left: 0 !important;
   border-right: 0 !important;
+  -moz-border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  border-radius: 0 !important;
+  border-color: #bbb !important;
 }
