--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
@@ -28,6 +28,7 @@
 }
 
 .cke_contents {
+  overflow-y: hidden !important; 
   border-bottom: 0 !important;
   border-left: 0 !important;
   border-right: 0 !important;
