--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
@@ -180,3 +180,7 @@ body[contenteditable="false"] *,
 .cke_editable[contenteditable="false"] * {
   color: #888 !important;
 }
+
+body {
+  padding: 8px;
+}
