--- a/src/main/java/net/simpleframework/mvc/component/ext/syntaxhighlighter/$resource/css/default/shCore.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/syntaxhighlighter/$resource/css/default/shCore.css
@@ -44,7 +44,7 @@
   vertical-align: baseline !important;
   width: auto !important;
   box-sizing: content-box !important;
-  font-family: "Consolas" !important;
+  font-family: "Monaco", "Consolas" !important;
   font-weight: normal !important;
   font-style: normal !important;
   font-size: 1em !important;
