--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -154,23 +154,37 @@
 	
 .Comp_Comment .t1_comments .oitem .rc {
 	background-color: #f5f5f5;
-	margin: 4px 4px 0 -11px;
+	margin: 6px 6px 0 -2px;
 	padding: 12px;
 	color: #666;
 	-moz-border-radius: 9px;
 	-webkit-border-radius: 9px;
 	border-radius: 9px;
+	font-style: italic;
 }
 
 .Comp_Comment .t1_comments .oitem .r_desc {
-	padding-bottom: 5px;
-	margin-bottom: 4px;
+  padding-bottom: 4px;
+  margin-bottom: 2px;
 }
 
 .Comp_Comment .t1_comments .oitem .desc {
-	margin: 8px 8px 4px 0;
-	text-align: right;
+	margin: 0 8px 4px 0;
+	text-align: left;
 	color: #888;
+}
+
+.Comp_Comment .t1_comments .oitem .desc img {
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 4px;
+}
+
+.Comp_Comment .t1_comments .oitem .desc span {
+  font-size: 8.5pt;
+  vertical-align: middle;
 }
 
 .Comp_Comment .pager_no_result {
