--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -149,7 +149,7 @@
 .Comp_Comment .t1_comments .oitem .mc {
 	font-size: 9.5pt;
 	line-height: 1.6;
-	padding: 12px 0;
+	padding: 12px 12px 12px 0;
 }
 	
 .Comp_Comment .t1_comments .oitem .rc {
