--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -179,7 +179,7 @@
   height: 16px;
   vertical-align: middle;
   cursor: pointer;
-  margin-left: 3px;
+  margin-right: 4px;
 }
 
 .Comp_Comment .t1_comments .oitem .desc span {
