--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -162,15 +162,13 @@
 }
 	
 .Comp_Comment .t1_comments .oitem .rc {
-	background-color: #f7f7f7;
-	margin-bottom: 8px;
-	padding: 12px;
-	color: #888;
+  border-left: 3px solid #eee;
+  color: #888;
   font-size: 8.5pt;
-	-moz-border-radius: 9px;
-	-webkit-border-radius: 9px;
-	border-radius: 9px;
-	font-style: italic;
+  font-style: italic;
+  margin-left: 12px;
+  margin-top: 10px;
+  padding: 4px 6px;
 }
 
 .Comp_Comment .t1_comments .oitem .r_desc {
