--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -158,7 +158,7 @@
 }
 
 .Comp_Comment .t1_comments .oitem .mc {
-  font-size: 9.5pt;
+  font-size: 10pt;
   line-height: 1.6;
   padding-bottom: 10px;
   text-align: justify;
@@ -178,6 +178,15 @@
 .Comp_Comment .t1_comments .oitem .r_desc {
   padding-bottom: 4px;
   margin-bottom: 2px;
+}
+
+.Comp_Comment .t1_comments .oitem .rr {
+  font-size: 9.5pt;
+  margin-top: 8px;
+}
+
+.Comp_Comment .t1_comments .oitem .rr a {
+  color: #888;
 }
 
 .Comp_Comment .t1_comments .oitem .desc {
