--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -161,6 +161,7 @@
   font-size: 10pt;
   line-height: 1.6;
   padding-bottom: 10px;
+  padding-right: 10px;
   text-align: justify;
   color: #333;
 }
