--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -248,3 +248,25 @@
 .Comp_Comment .pager .pager_block_bottom {
   padding: 12px 8px;
 }
+
+.Comp_Comment .mc .audio-attach {
+  background-color: #eee;
+  display: inline-block;
+  line-height: 1;
+  padding: 4px 20px 4px 15px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.Comp_Comment .mc .audio-attach img {
+  vertical-align: middle;
+  width: 21px;
+  margin-right: 8px;
+  margin-right: 2px;
+}
+
+.Comp_Comment .mc .audio-attach span {
+  vertical-align: middle;
+}
