--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -72,21 +72,26 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-bottom: 1px solid #38c;
+  border-bottom: 1px solid #49d;
   height: 10px;
 }
 
 .Comp_Attachment .audio-player .dot {
   position: absolute;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  width: 5px;
-  height: 5px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  width: 24px;
+  height: 9px;
   background-color: #fff;
-  border: 2px solid #38c;
-  bottom: -5px;
+  border: 1px solid #38c;
+  bottom: -6px;
   left: 0;
+  font-size: 5pt;
+  text-align: center;
+  line-height: 1.3;
+  word-break: keep-all;
+  word-wrap: normal;
 }
 
 .Comp_Attachment .l_attach {
@@ -100,17 +105,13 @@
   display: table-cell;
 }
 
-.Comp_Attachment .l_attach>a {
-  padding: 0 4px 0 8px;
-}
-
 .Comp_Attachment .l_attach .ord {
   color: #666;
-  margin-right: 8px;
+  width: 24px;
 }
 
 .Comp_Attachment .l_attach .size {
-  margin-left: 4px;
+  padding-left: 4px;
   color: #999;
   font-size: 7.5pt;
 }
