--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/ckeditor.css
@@ -24,7 +24,7 @@
   -moz-border-radius: 0 !important;
   -webkit-border-radius: 0 !important;
   border-radius: 0 !important;
-  border-color: #bbb !important;
+  border-color: #ccc !important;
 }
 
 .cke_contents {
