--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
@@ -32,9 +32,21 @@
 .html-editor-topic2 {
   font-size: 11.5pt !important;
   font-weight: bolder !important;
-  color: #655 !important;
-  border-left: 3px solid #e33;
+  color: #753 !important;
+  border-left: 3px solid #753;
   padding-left: 10px;
+}
+
+.html-editor-topic3 {
+	text-align: center !important;
+	font-size: 11.5pt !important;
+	color: #579 !important;
+	font-weight: bolder !important;
+	border-bottom: 2px solid #579;
+	border-top: 2px solid #579;
+	display: table;
+	margin: 18px auto;
+	padding: 4px;
 }
 
 .html-editor-border1 {
