--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
@@ -1,19 +1,3 @@
-video::-internal-media-controls-download-button {
-  display: none;
-}
-
-video::-webkit-media-controls-enclosure {
-  overflow: hidden;
-}
-
-video::-webkit-media-controls-panel {
-  width: calc(100% + 30px);
-}
-
-a:focus {
-  outline: none !important;
-}
-
 .html-editor-topic1 {
   text-align: center !important;
   font-size: 11.5pt !important;
@@ -148,4 +132,53 @@ a:focus {
   float: left;
   margin-right: 15px;
   padding: 5px;
+}
+
+/*---------------| cke_editable |--------------*/
+.cke_editable video::-internal-media-controls-download-button {
+  display: none;
+}
+
+.cke_editable video::-webkit-media-controls-enclosure {
+  overflow: hidden;
+}
+
+.cke_editable video::-webkit-media-controls-panel {
+  width: calc(100% + 30px);
+}
+
+.cke_editable a:focus {
+  outline: none !important;
+}
+
+.cke_editable div, 
+.cke_editable p {
+  max-width: 100% !important;
+  text-align: justify;
+  overflow-x: auto;
+}
+
+.cke_editable img, 
+.cke_editable table {
+  max-width: 100% !important;
+}
+
+.cke_editable table {
+  border: none;
+  border-collapse: collapse;
+}
+
+.cke_editable table th {
+  text-align: center;
+  background-color: #eee;
+}
+
+.cke_editable table td, 
+.cke_editable table th {
+  padding: 4px;
+}
+
+.cke_editable table td p {
+  margin: 0;
+  padding: 3px 0;
 }
