--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/$resource/css/default/attachment.css
@@ -41,6 +41,11 @@
   height: 96px;
 }
 
+.Comp_Attachment .imgc .iitem img.move {
+  width: 12px;
+  margin: 0 4px;
+}
+
 .Comp_Attachment .imgc img.status { 
   vertical-align: middle;
   margin-left: 3px;
