--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
@@ -13,20 +13,23 @@
 .html-editor-topic1:after {
   content: "";
   display: inline-block;
-  width: 30px;
+  width: 20px;
   height: 2px;
   background-color: #a16;
   vertical-align: middle;
   position: absolute;
   top: 50%;
+  -moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 
 .html-editor-topic1:before {
-  left: -40px;
+  left: -30px;
 }
 
 .html-editor-topic1:after {
-  right: -40px;
+  right: -30px;
 }
 
 .html-editor-topic2 {
@@ -67,6 +70,8 @@
   padding: 8px 10px;
   border-left: 3px solid #e33;
   border-right: 3px solid #e33;
+  -moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
   border-radius: 6px;
 }
 
